update output class to id.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       </div>
       <button type='submit' class='btn btn-primary'>Submit</button>
     </form>
-    <div class='output'>
+    <div id='output'>
       <p>There are <span class='doctor-count'></span> doctors that meet your search criteria.</p>
       <div class='doctor'></div>
     </div>
