add functionality to empty appended doctors on submit.

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,8 @@
       </div>
       <button type='submit' class='btn btn-primary'>Submit</button>
     </form>
-    <div id='output'>
-      <p>There are <span class='doctor-count'></span> doctors that meet your search criteria.</p>
-      <div class='doctor'></div>
+    <p id='result'>There are <span class='count'></span> doctors that meet your search criteria.</p>
+    <div class='doctors'>
     </div>
   </div>
 </body>
