update functionality to include search by name.

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <h1>Doctor Lookup</h1>
     <form>
       <div class='form-group'>
-        <label for='medical-issue'>What's your medical issue?</label>
-        <input type='text' class='form-control' id='medical-issue' placeholder='sore throat, rash, etc.'>
+        <label for='query'>Search by medical issue or name:</label>
+        <input type='text' class='form-control' id='query' placeholder='Enter medical issue or name'>
       </div>
       <button type='submit' class='btn btn-primary'>Submit</button>
     </form>
-    <p id='result'>There are <span class='count'></span> doctors that meet your search criteria.</p>
+    <p id='result'>There <span class='count'></span> doctors that meet your search criteria.</p>
     <div class='doctors'>
     </div>
   </div>
