add functionality to display results based on how many doctors are appended.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
       </div>
       <button type='submit' class='btn btn-primary'>Submit</button>
     </form>
-    <p id='result'>There <span class='count'></span> doctors that meet your search criteria.</p>
+    <p id='result'>There is <span class='count'></span> doctor that meets your search criteria.</p>
+    <p id='results'>There are <span class='count'></span> doctors that meet your search criteria.</p>
     <div class='doctors'>
     </div>
   </div>
