--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,24 @@
 <html lang='en' dir='ltr'>
 <head>
   <meta charset='utf-8'>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Calistoga|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
+
   <title>Doctor Lookup</title>
 </head>
 <body>
   <div class='container'>
-    <h1>Doctor Lookup</h1>
-    <form>
-      <div class='form-group'>
-        <label for='query'>Search by medical issue or name:</label>
-        <input type='text' class='form-control' id='query' placeholder='Enter medical issue or name'>
-      </div>
-      <button type='submit' class='btn btn-primary'>Submit</button>
-    </form>
+    <div class="box">
+      <h1>Doctor Lookup</h1>
+      <form>
+        <div class='form-group'>
+          <label for='query'>Search by medical issue or name:</label>
+          <input type='text' class='form-control form-control-lg' id='query' placeholder='Enter medical issue or name'>
+        </div>
+        <button type='submit' class='btn-lg btn-primary'>Submit</button>
+      </form>
+    </div>
     <p id='result'>There is <span class='count'></span> doctor that meets your search criteria.</p>
     <p id='results'>There are <span class='count'></span> doctors that meet your search criteria.</p>
     <div class='doctors'>
